--- a/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
@@ -47,7 +47,7 @@
         android:id="@+id/textview_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/button_second"
+        app:layout_constraintBottom_toTopOf="@id/start_new_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_second"
+        android:id="@+id/start_new_game"
         android:layout_width="365dp"
         android:layout_height="52dp"
         android:layout_marginBottom="128dp"
@@ -78,13 +78,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/resume_previous"
         android:layout_width="365dp"
         android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:text="Resume Previous Game"
         app:backgroundTint="#CC3C5661"
-        app:layout_constraintBottom_toTopOf="@+id/button_second"
+        app:layout_constraintBottom_toTopOf="@+id/start_new_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
