--- a/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".HomeScreen"
+    tools:context=".HomeActivity"
     tools:openDrawer="start" >
 
     <com.google.android.material.navigation.NavigationView
@@ -20,74 +20,33 @@
 
     </com.google.android.material.navigation.NavigationView>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#97B6A7">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#97B6A7">
 
-    <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="98dp"
-        android:gravity="center|left"
-        android:orientation="vertical"
-        android:paddingLeft="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="413dp"
+            android:layout_height="98dp"
+            android:gravity="center|left"
+            android:orientation="vertical"
+            android:paddingLeft="40dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/menu_icon"
-            android:layout_width="49dp"
-            android:layout_height="47dp"
-            android:src="@drawable/menu_icon" />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/menu_icon"
+                android:layout_width="49dp"
+                android:layout_height="47dp"
+                android:src="@drawable/menu_icon" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/textview_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/button_second"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <include
+            layout="@layout/fragment_home_screen" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:text="Welcome to ChessMate!"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_second"
-        android:layout_width="365dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="128dp"
-        android:text="Start a New Game"
-        app:backgroundTint="#CC3C5661"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="365dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="8dp"
-        android:text="Resume Previous Game"
-        app:backgroundTint="#CC3C5661"
-        app:layout_constraintBottom_toTopOf="@+id/button_second"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
