--- a/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
@@ -20,32 +20,26 @@
 
     </com.google.android.material.navigation.NavigationView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="#97B6A7">
 
-        <LinearLayout
-            android:layout_width="413dp"
-            android:layout_height="98dp"
-            android:gravity="center|left"
-            android:orientation="vertical"
-            android:paddingLeft="40dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+        <androidx.appcompat.widget.Toolbar
+            android:layout="@layout/toolbar"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#97B6A7" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent">
+        </FrameLayout>
 
-            <ImageView
-                android:id="@+id/menu_icon"
-                android:layout_width="49dp"
-                android:layout_height="47dp"
-                android:src="@drawable/menu_icon" />
-        </LinearLayout>
-
-        <include
-            layout="@layout/fragment_home_screen" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
