--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,76 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreen"
-    android:id="@+id/home_screen"
-    android:background="#97B6A7">
+    tools:context=".HomeScreen">
 
-    <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="98dp"
-        android:gravity="center|left"
-        android:orientation="vertical"
-        android:paddingLeft="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".HomeScreen"
+        android:id="@+id/home_screen"
+        android:background="#97B6A7">
 
-        <ImageView
-            android:id="@+id/menu_icon"
-            android:layout_width="49dp"
-            android:layout_height="47dp"
-            android:src="@drawable/menu_icon" />
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textview_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/start_new_game"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textview_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/start_new_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="96dp"
+            android:text="Welcome to ChessMate!"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:text="Welcome to ChessMate!"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/start_new_game"
+            android:layout_width="365dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="128dp"
+            android:text="Start a New Game"
+            app:backgroundTint="#CC3C5661"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/start_new_game"
-        android:layout_width="365dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="128dp"
-        android:text="Start a New Game"
-        app:backgroundTint="#CC3C5661"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/resume_previous"
+            android:layout_width="365dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="8dp"
+            android:text="Resume Previous Game"
+            app:backgroundTint="#CC3C5661"
+            app:layout_constraintBottom_toTopOf="@+id/start_new_game"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/resume_previous"
-        android:layout_width="365dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="8dp"
-        android:text="Resume Previous Game"
-        app:backgroundTint="#CC3C5661"
-        app:layout_constraintBottom_toTopOf="@+id/start_new_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
