--- a/frontend/ChessieGame/app/src/main/res/values/styles.xml
+++ b/frontend/ChessieGame/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="android:actionMenuTextColor">@drawable/menu_item_selector</item>
     </style>
 
     <style name="AppTheme.CustomTheme">
