--- a/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_home_screen.xml
@@ -17,11 +17,11 @@
         android:background="#97B6A7">
 
         <androidx.appcompat.widget.Toolbar
-            android:layout="@layout/toolbar"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#97B6A7" />
+            android:layout_height="74dp"
+            android:background="#97B6A7"
+            android:layout="@layout/toolbar" />
 
         <FrameLayout
             android:id="@+id/fragment_container"
