--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -48,8 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
         android:layout_marginTop="96dp"
+        android:gravity="center"
         android:text="SELECT OPPONENT SKILL LEVEL:"
         android:textColor="#FFFFFF"
         android:textSize="24sp" />
@@ -58,8 +57,10 @@
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/hard_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
         android:layout_marginBottom="100dp"
         android:text="START"
         android:textColor="#0C0B0B"
