--- a/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
@@ -6,4 +6,331 @@
     android:layout_height="match_parent"
     tools:context=".ChessScreen">
 
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rowCount="8"
+        android:columnCount="8"
+        android:id="@+id/grid"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        //Change order
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        //Chessboard
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        //Change order
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        //Change order
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        //Change order
+
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+        <TextView
+            android:background="@color/white"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+        <TextView
+            android:background="@color/black"
+            android:layout_width="43dp"
+            android:layout_height="43dp" />
+
+
+
+
+    </GridLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
