--- a/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/view_root"
     tools:context=".ChessScreen">
 
 
-    <FrameLayout
+    <LinearLayout
 
         android:id="@+id/pawn_chioces"
         android:layout_width="0dp"
@@ -16,7 +16,6 @@
         android:background="#dcf18d6d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,15 +28,17 @@
             android:layout_height="40dp"
             android:layout_margin="5sp"
             android:background="#642C9C"
-            android:drawableLeft="@drawable/wqueen"
-            android:drawableRight="@drawable/bqueen"
+            android:baselineAligned="false"
             android:elevation="6dp"
             android:gravity="center_horizontal"
             android:padding="5sp"
             android:text="Queen"
             android:textAlignment="center"
             android:textColor="#e60f0f"
-            android:textSize="40sp" />
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
 
         <GridLayout
             android:id="@+id/grid"
@@ -52,7 +53,10 @@
 
             <TextView
                 android:layout_width="43dp"
+                android:id="@+id/P00"
                 android:layout_height="43dp"
+                android:layout_row="0"
+                android:layout_column="0"
                 android:background="@color/black" />
 
             <TextView
@@ -381,11 +385,6 @@
                 android:background="@color/black" />
 
         </GridLayout>
-
-    </FrameLayout>
-
-
-
 
 
 
