added google signin

--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
@@ -36,6 +36,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/user_uid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="email"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toTopOf="@+id/resume_previous"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.054" />
+
         <Button
             android:id="@+id/start_new_game"
             android:layout_width="365dp"
