--- a/frontend/ChessieGame/app/src/main/res/layout/menu_header.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/menu_header.xml
@@ -11,7 +11,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/header_profile"
         android:layout_width="80dp"
         android:layout_height="80dp"
         tools:srcCompat="@tools:sample/avatars" />
