--- a/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
@@ -387,7 +387,15 @@
 
         </GridLayout>
 
-
+    <TextView
+        android:id="@+id/paired_devices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Devices"
+        app:layout_constraintBottom_toBottomOf="@+id/pawn_chioces"
+        app:layout_constraintEnd_toEndOf="@+id/grid"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grid" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
