--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_account_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_account_screen.xml
@@ -47,11 +47,13 @@
             app:elevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.833" />
+            app:layout_constraintVertical_bias="0.882" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="120dp"
             android:layout_height="120dp"
             app:cardCornerRadius="65dp"
@@ -70,6 +72,19 @@
                 android:adjustViewBounds="false"
                 android:src="@drawable/account_icon" />
         </androidx.cardview.widget.CardView>
+
+        <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/account_grid"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            app:columnCount="3"
+            app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+        </androidx.gridlayout.widget.GridLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
