--- a/frontend/ChessieGame/app/src/main/res/layout/board.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/board.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TableLayout
-        android:id="@+id/board"
+        android:id="@+id/chessboard"
         android:layout_width="360dp"
         android:layout_height="360dp"
         app:layout_constraintBottom_toBottomOf="parent"
