--- a/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_chess_screen.xml
@@ -11,7 +11,7 @@
 
 
     <TableLayout
-        android:id="@+id/chessboard"
+        android:id="@+id/chess"
         android:layout_width="384dp"
         android:layout_height="384dp"
         app:layout_constraintBottom_toTopOf="@+id/paired_devices"
