--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_home_screen.xml
@@ -22,16 +22,18 @@
             android:text="Welcome to ChessMate!"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/resume_previous"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/start_new_game"
             android:layout_width="365dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="136dp"
+            android:layout_marginBottom="100dp"
             android:text="Start a New Game"
             app:backgroundTint="#CC3C5661"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +49,6 @@
             app:backgroundTint="#CC3C5661"
             app:layout_constraintBottom_toTopOf="@+id/start_new_game"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
