--- a/frontend/ChessieGame/app/src/main/res/layout/activity_replay_past_games_screen.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/activity_replay_past_games_screen.xml
@@ -10,6 +10,8 @@
         android:id="@+id/arrow_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="-30dp"
+        android:layout_marginLeft="-30dp"
         android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.13"
