--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
@@ -42,6 +42,20 @@
         app:backgroundTint="#E6FFECFB" />
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="179dp"
+        android:layout_marginLeft="179dp"
+        android:layout_marginEnd="174dp"
+        android:layout_marginRight="174dp"
+        android:text="TextView" />
+
+    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
