--- a/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/fragment_difficulty_set.xml
@@ -70,12 +70,12 @@
     <Button
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_below="@+id/hard_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="98dp"
         android:text="START"
         android:textColor="#0C0B0B"
         android:textSize="18sp"
