resume popup why are u buggyy

--- a/frontend/ChessieGame/app/src/main/res/layout/pause_game.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/pause_game.xml
@@ -24,9 +24,9 @@
         android:layout_width="253dp"
         android:layout_height="55dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="59dp"
-        android:layout_marginBottom="492dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="453dp"
+        android:layout_marginBottom="491dp"
         android:text="RESUME"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -50,8 +50,8 @@
         android:layout_width="247dp"
         android:layout_height="95dp"
         android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="284dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="260dp"
         android:gravity="center"
         android:text="To Save and Quit: Press KEY1 then Quit"
         android:textColor="#FFFFFF"
@@ -64,7 +64,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
-        android:layout_marginBottom="240dp"
+        android:layout_marginBottom="287dp"
         android:text="QUIT"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
