fixed layout pause

--- a/frontend/ChessieGame/app/src/main/res/layout/pause_game.xml
+++ b/frontend/ChessieGame/app/src/main/res/layout/pause_game.xml
@@ -23,10 +23,10 @@
         android:id="@+id/resume"
         android:layout_width="253dp"
         android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="453dp"
-        android:layout_marginBottom="491dp"
+
+        android:layout_marginTop="164dp"
         android:text="RESUME"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -51,9 +51,9 @@
         android:layout_height="95dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="237dp"
         android:gravity="center"
-        android:text="To Save and Quit: Press KEY1 then Quit"
+        android:text="To Save and Quit: Press KEY1 then press the QUIT button"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
@@ -61,10 +61,10 @@
         android:id="@+id/quit"
         android:layout_width="253dp"
         android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp"
-        android:layout_marginBottom="287dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="344dp"
+        android:layout_marginBottom="316dp"
         android:text="QUIT"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
